--- a/Java/AppListaCurso/app/src/main/res/layout/activity_splash.xml
+++ b/Java/AppListaCurso/app/src/main/res/layout/activity_splash.xml
@@ -5,6 +5,7 @@
     android:id="@+id/main"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
+    android:background="#B1BEC6"
     tools:context=".view.SplashActivity">
 
     <ImageView
@@ -15,5 +16,5 @@
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent"
-        app:srcCompat="@android:drawable/sym_def_app_icon" />
+        app:srcCompat="@mipmap/ic_launcher" />
 </androidx.constraintlayout.widget.ConstraintLayout>
