--- a/Java/AppClientes/app/src/main/res/menu/activity_main_drawer.xml
+++ b/Java/AppClientes/app/src/main/res/menu/activity_main_drawer.xml
@@ -5,6 +5,11 @@
 
     <group android:checkableBehavior="single">
 
+        <item android:id="@+id/adicionar_cliente_nav"
+            android:icon="@drawable/ic_item_menu_padrao"
+            android:title="@string/adicionar_cliente" />
+
+
         <item android:id="@+id/nav_preto"
             android:icon="@drawable/ic_item_menu_padrao"
             android:title="@string/fragmento_preto" />
