--- a/Java/AppClientes/app/src/main/res/layout/adicionar_cliente.xml
+++ b/Java/AppClientes/app/src/main/res/layout/adicionar_cliente.xml
@@ -41,6 +41,7 @@
             android:background="@color/orange"
             android:gravity="left"
             android:hint="Telefone"
+            android:inputType="phone"
             android:textColor="@color/colorPrimary"
             android:textSize="18sp"
             android:textStyle="bold" />
@@ -53,6 +54,7 @@
             android:background="@color/orange"
             android:gravity="left"
             android:hint="Email"
+            android:inputType="textEmailAddress"
             android:textColor="@color/colorPrimary"
             android:textSize="18sp"
             android:textStyle="bold" />
@@ -65,6 +67,7 @@
             android:background="@color/orange"
             android:gravity="left"
             android:hint="CEP"
+            android:inputType="number"
             android:textColor="@color/colorPrimary"
             android:textSize="18sp"
             android:textStyle="bold" />
@@ -101,6 +104,7 @@
             android:background="@color/orange"
             android:gravity="left"
             android:hint="Número"
+            android:inputType="number"
             android:textColor="@color/colorPrimary"
             android:textSize="18sp"
             android:textStyle="bold" />
