--- a/Java/AppClientes/app/src/main/res/values/styles.xml
+++ b/Java/AppClientes/app/src/main/res/values/styles.xml
@@ -17,4 +17,8 @@
 
     <style name="AppTheme.PopupOverlay" parent="ThemeOverlay.AppCompat.Light" />
 
+    <style name ="CustomizeButton" parent="Widget.AppCompat.Button">
+        <item name="android:textColor">@color/gray</item>
+        <item name="backgroundTint">@color/azul</item>
+    </style>
 </resources>
