alteracao de cores no layout

--- a/Java/AppGeoLocalizacao/app/src/main/res/values/colors.xml
+++ b/Java/AppGeoLocalizacao/app/src/main/res/values/colors.xml
@@ -2,4 +2,8 @@
 <resources>
     <color name="black">#FF000000</color>
     <color name="white">#FFFFFFFF</color>
+
+    <color name="texto_destaque">#4CAF50</color>
+    <color name="bg_color_night">#1E1F22</color>
+
 </resources>
