--- a/Java/AppGeoLocalizacao/app/src/main/res/values/themes.xml
+++ b/Java/AppGeoLocalizacao/app/src/main/res/values/themes.xml
@@ -3,6 +3,8 @@
     <style name="Base.Theme.AppGeoLocalizacao" parent="Theme.Material3.DayNight.NoActionBar">
         <!-- Customize your light theme here. -->
         <!-- <item name="colorPrimary">@color/my_light_primary</item> -->
+        <item name = "backgroundColor">@color/bg_color_night</item>
+        <item name = "android:statusBarColor" tools:targetApi="l">@color/bg_color_night</item>
     </style>
 
     <style name="Theme.AppGeoLocalizacao" parent="Base.Theme.AppGeoLocalizacao" />
