Implementação da API do GoogleMaps

--- a/Java/AppGeoLocalizacao/app/src/main/res/layout/activity_main.xml
+++ b/Java/AppGeoLocalizacao/app/src/main/res/layout/activity_main.xml
@@ -95,6 +95,16 @@
             app:layout_constraintTop_toTopOf="@+id/txtCoordenasGPS"
             app:layout_constraintVertical_bias="0.029" />
 
+        <fragment
+            android:id="@+id/map"
+            android:name="com.google.android.gms.maps.SupportMapFragment"
+            android:layout_width="379dp"
+            android:layout_height="344dp"
+            app:layout_constraintBottom_toBottomOf="parent"
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintTop_toBottomOf="@+id/imgPinGPS" />
+
     </androidx.constraintlayout.widget.ConstraintLayout>
 
 
