CRUD completo da classe Categoria

--- a/Java/AppListaDeCompras/app/src/main/res/layout/app_bar_main.xml
+++ b/Java/AppListaDeCompras/app/src/main/res/layout/app_bar_main.xml
@@ -4,7 +4,7 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context="br.com.dev.applistadecompras.MainActivity">
+    tools:context="br.com.dev.applistadecompras.view.MainActivity">
 
     <com.google.android.material.appbar.AppBarLayout
         android:layout_width="match_parent"
