--- a/Java/AppListaDeCompras/app/src/main/res/layout/content_main.xml
+++ b/Java/AppListaDeCompras/app/src/main/res/layout/content_main.xml
@@ -5,7 +5,7 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     app:layout_behavior="@string/appbar_scrolling_view_behavior"
-    tools:context="br.com.dev.applistadecompras.MainActivity"
+    tools:context="br.com.dev.applistadecompras.view.MainActivity"
     tools:showIn="@layout/app_bar_main">
 
 
