--- a/Java/AppListaDeCompras/app/src/main/res/layout/fragment_preto.xml
+++ b/Java/AppListaDeCompras/app/src/main/res/layout/fragment_preto.xml
@@ -3,7 +3,7 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:background="#0C0C0C"
-    tools:context="br.com.dev.applistadecompras.ModeloPretoFragment">
+    tools:context="br.com.dev.applistadecompras.view.ModeloPretoFragment">
 
 
     <!-- Terceiro Passo -->
