--- a/Java/AppListaDeCompras/app/src/main/res/layout/fragment_vermelho.xml
+++ b/Java/AppListaDeCompras/app/src/main/res/layout/fragment_vermelho.xml
@@ -3,7 +3,7 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:background="#8F1108"
-    tools:context="br.com.dev.applistadecompras.ModeloVermelhoFragment">
+    tools:context="br.com.dev.applistadecompras.view.ModeloVermelhoFragment">
 
 
     <!-- Terceiro Passo -->
