--- a/Java/AppListaDeCompras/app/src/main/res/layout/fragment_meus_produtos.xml
+++ b/Java/AppListaDeCompras/app/src/main/res/layout/fragment_meus_produtos.xml
@@ -2,21 +2,20 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:background="#8F1108"
-    tools:context="br.com.dev.applistadecompras.view.ModeloVermelhoFragment">
-
+    android:background="#07487C"
+    tools:context="br.com.dev.applistadecompras.view.MeusProdutosFragment">
 
     <!-- Terceiro Passo -->
 
     <TextView
-        android:id="@+id/txtTitulo"
+        android:id="@+id/txtMeusProdutos"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
         android:gravity="center"
-        android:layout_marginTop="30sp"
+        android:layout_marginTop="10sp"
         android:textSize="18sp"
         android:textStyle="bold"
         android:textColor="@color/colorPrimary"
-        android:text="@string/modelo_fragment" />
+        android:text="@string/txtMeusProdutos" />
 
 </FrameLayout>
