--- a/Java/AppListaDeCompras/app/src/main/res/layout/fragment_minhas_compras.xml
+++ b/Java/AppListaDeCompras/app/src/main/res/layout/fragment_minhas_compras.xml
@@ -2,20 +2,21 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:background="#07487C"
-    tools:context="br.com.dev.applistadecompras.view.ModeloAzulFragment">
+    android:background="#8F1108"
+    tools:context="br.com.dev.applistadecompras.view.MinhasComprasFragment">
+
 
     <!-- Terceiro Passo -->
 
     <TextView
-        android:id="@+id/txtTitulo"
+        android:id="@+id/txtMinhasCompras"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
         android:gravity="center"
-        android:layout_marginTop="10sp"
+        android:layout_marginTop="30sp"
         android:textSize="18sp"
         android:textStyle="bold"
         android:textColor="@color/colorPrimary"
-        android:text="@string/modelo_fragment" />
+        android:text="@string/txtMinhasCompras" />
 
 </FrameLayout>
