--- a/Java/AppClientes/app/src/main/res/values/styles.xml
+++ b/Java/AppClientes/app/src/main/res/values/styles.xml
@@ -17,8 +17,12 @@
 
     <style name="AppTheme.PopupOverlay" parent="ThemeOverlay.AppCompat.Light" />
 
+    <style name="AppThemeLightAppClientes" parent="Theme.Material3.Light">
+
+    </style>
+
     <style name ="CustomizeButton" parent="Widget.AppCompat.Button">
-        <item name="android:textColor">@color/gray</item>
-        <item name="backgroundTint">@color/azul</item>
+        <item name="android:textColor">@color/bg_color_dark_theme</item>
+        <item name="backgroundTint">@color/splash_bgr</item>
     </style>
 </resources>
