--- a/Java/AppClientes/app/src/main/res/values/themes.xml
+++ b/Java/AppClientes/app/src/main/res/values/themes.xml
@@ -3,6 +3,7 @@
     <style name="Base.Theme.AppClientes" parent="Theme.Material3.DayNight.NoActionBar">
         <!-- Customize your light theme here. -->
         <!-- <item name="colorPrimary">@color/my_light_primary</item> -->
+        <item name="android:forceDarkAllowed" tools:targetApi="31">false</item>
     </style>
 
     <style name="Theme.AppClientes" parent="Base.Theme.AppClientes" />
