--- a/Java/AppListaDeCompras/app/src/main/res/values/colors.xml
+++ b/Java/AppListaDeCompras/app/src/main/res/values/colors.xml
@@ -3,4 +3,7 @@
     <color name="colorPrimary">#4CAF50</color>
     <color name="colorPrimaryDark">#859F67</color>
     <color name="colorAccent">#FFC107</color>
+
+    <color name="bg_color_dark_theme">#000000</color>
+    <color name="bgr_app">#2196F3</color>
 </resources>
