--- a/Java/AppListaDeCompras/app/src/main/res/values/colors.xml
+++ b/Java/AppListaDeCompras/app/src/main/res/values/colors.xml
@@ -6,4 +6,6 @@
 
     <color name="bg_color_dark_theme">#000000</color>
     <color name="bgr_app">#2196F3</color>
+
+    <color name="rootApp">#FF6E42</color>
 </resources>
